@@ -4,6 +4,7 @@ EXPORTED {
 		xchat_hook_server;
 		xchat_hook_print;
 		xchat_hook_timer;
+		xchat_hook_socket;
 		xchat_unhook;
 		xchat_print;
 		xchat_printf;
